--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.468.0",
+    "micromark": "^4.0.2",
     "mongodb": "^6.11.0",
     "next": "14.2.20",
     "react": "^18",
